--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/landing-layout.component.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/landing-layout.component.html
@@ -1,1 +1,6 @@
-<p>landing page work!</p>
+<app-nav-bar></app-nav-bar>
+<app-header></app-header>
+<app-trusted-partners></app-trusted-partners>
+<app-tech-partners></app-tech-partners>
+<app-pricing></app-pricing>
+<app-footer></app-footer>
