add login front end to login component

--- a/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<button class="btn text-white">
+<button [routerLink]="['/']" class="btn text-white">
   <i class="fas fa-arrow-left m-2"></i>
   back to home
 </button>
