--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 <section class="  rounded-4 mx-auto bg-white">
-<!-- the two icons -->
+  <!-- the two icons -->
   <div class="icons">
     <div class="left">
       <span>
@@ -23,34 +23,50 @@
   </div>
 
 
-<form >
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your National ID">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
+        aria-describedby="emailHelp" placeholder="Enter your National ID">
+      <div class="text-danger mt-1" *ngIf="email?.invalid && (email?.touched || email?.dirty)">
+        <small *ngIf="email?.errors?.['required']">
+          **Email is required.**
+        </small>
 
+        <small *ngIf="email?.errors?.['email']">
+          Please enter a valid email address (e.g., user@example.com).
+        </small>
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1"
+        placeholder="Enter your password">
+      <div class="text-danger" *ngIf="password?.invalid && password?.touched">
+        <small *ngIf="password?.errors?.['required']">**Password is required.**</small>
+      </div>
+    </div>
+
+    <button type="submit" class="btn w-100 login-submit">Login with Email</button>
+    <div #errorMessage class="alert alert-danger mt-3 d-none">
+    </div>
+
+    <div class="or-wrapper">
+      <div class="line"></div>
+      <span class="or-badge">OR</span>
+      <div class="line"></div>
+    </div>
+    <button type="submit" class="btn border rounded-2 w-100"> <img src="/windows_2374606.png" alt=""> Login with
+      Microsoft Identity</button>
+  </form>
+
+
+  <div class="forgot text-center">
+    <a>Forgot Password?</a>
+    <div class="first">
+      <a>First Time? Contact your institution</a>
+    </div>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password">
-  </div>
-
-  <button   type="submit" class="btn w-100 login-submit">Login with National ID</button>
-
-<div class="or-wrapper">
-  <div class="line"></div>
-  <span class="or-badge">OR</span>
-  <div class="line"></div>
-</div>
-  <button type="submit" class="btn border rounded-2 w-100"> <img  src="/windows_2374606.png" alt=""> Login with Microsoft Identity</button>
-</form>
 
 
-<div class="forgot text-center">
-  <a>Forgot Password?</a>
-  <div class="first">
-    <a>First Time? Contact your institution</a>
-  </div>
-</div>
-
-
-  </section>
+</section>
