--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/navBar-component/nav-bar/nav-bar.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/navBar-component/nav-bar/nav-bar.html
@@ -1,6 +1,6 @@
 <!-- navBar -->
 <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary py-3">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <a class="navbar-brand fw-normal fs-6" href="#hero">Manaraa.org</a>
     <button
       class="navbar-toggler"
@@ -32,12 +32,12 @@
         class="d-flex justify-content-sm-center justify-content-lg-between flex-column flex-sm-row"
         role="search"
       >
-        <button class="btn btn-outline-success px-4 py-2 mb-3 mb-sm-0 mt-3 mt-sm-0" type="submit">
-          Admin Portal
-        </button>
-        <button class="btn btn-outline-success px-4 py-2 login-btn ms-sm-3 ms-0" type="submit">
+        <a  class="btn btn-outline-success px-4 py-2 mb-3 mb-sm-0 mt-3 mt-sm-0">
+          Portal
+        </a>
+        <a class="btn btn-outline-success px-4 py-2 login-btn ms-sm-3 ms-0">
           Login
-        </button>
+        </a>
       </form>
     </div>
   </div>
