update landing page

--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/footer-component/footer/footer.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/footer-component/footer/footer.html
@@ -1,6 +1,6 @@
 <!-- footer -->
 <footer id="footer" class="footer py-5">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <div class="footer-c-1 py-4 row gy-3">
       <div class="col-md-6 col-lg-4 col-xl-3">
         <div class="text-start">
