--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/pricing-component/pricing/pricing.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/pricing-component/pricing/pricing.html
@@ -1,6 +1,6 @@
 <!-- pricing Section -->
 <section id="pricing" class="pricing py-5 text-center">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <h2 class="pricing-h fw-normal my-3">Choose Your License Structure</h2>
     <p class="pricing-p fw-normal mb-3">
       Scalable solutions designed for Egyptian educational institutions of all sizes
