--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/trustedPartners-component/trusted-partners/trusted-partners.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/trustedPartners-component/trusted-partners/trusted-partners.html
@@ -1,14 +1,14 @@
 <!-- trustedPartners Section -->
 <section id="trustedPartners" class="trustedPartners py-5">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <h2 class="trustedPartners-h fw-normal mb-4 text-center">
       Trusted by Leading Egyptian Institutions
     </h2>
     <p class="trustedPartners-p fw-normal mb-4 text-center">
       Serving over 20 universities and educational institutions across Egypt
     </p>
-    <div class="trustedPartners-slider mb-5">
-      <div class="row flex-nowrap overflow-x-auto pb-2">
+    <div class="trustedPartners-slider overflow-x-auto mb-5">
+      <div class="row flex-nowrap pb-2">
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="trustedPartners-slider-item p-3 d-flex flex-column rounded-4">
             <div class="trustedPartners-slider-item-logo d-flex justify-content-between mb-3">
