--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/header-component/header/header.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/header-component/header/header.html
@@ -1,6 +1,6 @@
 <!-- header Section -->
 <header id="header" class="header">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <div class="row py-5">
       <div class="col-lg-6">
         <div class="py-4">
