--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/pricing-component/pricing/pricing.css
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/pricing-component/pricing/pricing.css
@@ -18,6 +18,7 @@
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
+    cursor: pointer
 }
 
 .pricing-one-card:hover{
@@ -77,46 +78,6 @@
 /* Media Qeuries If Exists */
 @media (min-width: 576px) {
 
-.Certified {
-    visibility: visible;
-    bottom: -22px;
-    left: -22px;
-    border-left: 4px #D4AF37 solid;
-    z-index: 1;
-    background-color: white;
-}
-
-
-
-    h1{
-    font-size: var(--fz-20);
-}
-
-.header-p{
-    color: #E5E7EB;
-    font-size: var(--fz-14);
-}
-
-
-    .Ministry{
-    font-size: var(--fz-16);
-}
-
-.ISO{
-    font-size: var(--fz-14);
-}
-
-    .header-p{
-    font-size: var(--fz-16);
-}
-
-
-
-    h1{
-    font-size: var(--fz-30);
-}
-
-
 
     .pricing-h{
     font-size: var(--fz-18);
@@ -135,50 +96,12 @@
     font-size: var(--fz-12);
 }
 
-
-
-.trustedPartners-h{
-    font-size: var(--fz-16);
-}
-
-.trustedPartners-p{
-    font-size: var(--fz-14);
-}
-
-
-    .trustedPartners-last-item-n{
-        font-size: var(--fz-20) ;
-    }
-
-    .trustedPartners-last-item-p{
-    font-size: var(--fz-16) ;
-}
-
-
-.Reserved{
-    font-size: var(--fz-12);
-}
-
-
-.endorSementBar{
-    font-size: var(--fz-12);
-}
 }
 
 
 
 
 @media (min-width: 768px) {
-    .header-p{
-    font-size: var(--fz-18);
-}
-
-
-
-
-    h1{
-    font-size: var(--fz-36);
-}
 
 
 
@@ -202,23 +125,6 @@
 }
 
 
-
-.trustedPartners-h{
-    font-size: var(--fz-20);
-}
-
-.trustedPartners-p{
-    font-size: var(--fz-16);
-}
-
-
-.Reserved{
-    font-size: var(--fz-14);
-}
-
-    .endorSementBar{
-    font-size: var(--fz-14);
-}
 }
 
 
@@ -241,14 +147,5 @@
 
 }
 
-
-@media (min-width: 1200px) {
-
-}
-
-
-@media (min-width: 1400px) {
-
-}
 
 
