--- a/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/techPartners-component/tech-partners/tech-partners.html
+++ b/App.Frontend/src/app/features/landing-page/layouts/landing-layout/main-landing-page/techPartners-component/tech-partners/tech-partners.html
@@ -1,6 +1,6 @@
 <!-- techPartners -->
 <section id="techPartners" class="techPartners py-3">
-  <div class="container-fluid custom-container">
+  <div class="container">
     <h2 class="fw-normal techPartners-h text-center my-5">Powered By</h2>
     <div class="row g-3 mb-4">
       <div class="col-md-6 col-lg-4 col-xl-3">
