--- a/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
@@ -2,4 +2,8 @@
   <i class="fas fa-arrow-left m-2"></i>
   back to home
 </button>
-<app-login-form></app-login-form>
+
+<div class="test d-flex justify-content-center align-items-center">
+  <app-login-form></app-login-form>
+
+</div>
