view of forget password without logic

--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.css
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.css
@@ -133,10 +133,9 @@ img{
 
 /*forgot password style*/
 .forgot{
-  margin-top: 30px;
-}
-.forgot div{
   margin-top: 10px;
+  font-size: 12px;
 }
+
 
 
