--- a/App.Frontend/src/app/features/auth/pages/forget-password-page/forget-password-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/forget-password-page/forget-password-page.component.html
@@ -1,1 +1,5 @@
+<button [routerLink]="['/auth/login']" class="btn text-white">
+  <i class="fas fa-arrow-left m-2"></i>
+  back to login
+</button>
 <app-forget-password-form></app-forget-password-form>
