--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -1,6 +1,59 @@
-<p>
-  forget-password-form works!
-</p>
+<section class="  rounded-4 mx-auto bg-white">
+  <!-- the two icons -->
+  <div class="icons">
+    <div class="left">
+      <span>
+        <i class="fa-solid fa-shield"></i>
+      </span>
+      <p>Ministry of Higher Education</p>
+    </div>
+    <div class="right">
+      <span>
+        <i class="fa-solid fa-book-open"></i>
+      </span>
+      <p>Supreme Council of Universities</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <!--Title of Form-->
+  <div class="content text-center">
+    <h6>Forget Password</h6>
+    <p>Reset your account password</p>
+  </div>
+
+  <!--body of Form-->
+  <form>
+
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
+      aria-describedby="emailHelp" placeholder="Enter your National ID">
+    </div>
+
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Registered Email Address</label>
+      <input
+      type="password"
+      class="form-control"
+      formControlName="password"
+      id="exampleInputPassword1"
+      placeholder="Enter your email">
+    </div>
+
+    <button type="submit" class="btn w-100 login-submit">Send Reset Link</button>
+  </form>
+
+  <!--button of return-->
+  <div class="back">
+      <button [routerLink]="['/auth/login']" class="btn">
+        <i class="fas fa-arrow-left m-2"></i>
+        back to Login
+      </button>
+    </div>
+
+</section>
 
 
 
