reset and new password only view

--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.css
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.css
@@ -10,7 +10,8 @@ section{
 /*start style of the div which contains two icons*/
 .icons{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 15px;
     margin-bottom: -20px;
   }
   .icons div{
@@ -19,15 +20,11 @@ section{
     width: 100px;
     text-align: center;
   }
-  .icons .right{
-    margin-right: 80px;
-  }
+
   .icons .right span{
     background-color: #D4AF37  ;
   }
-  .icons .left{
-    margin-left: 80px;
-  }
+
   .icons .left span{
     background:linear-gradient(#0A1F44,#1E3A8A);
   }
@@ -95,11 +92,12 @@ section{
   justify-content: center;
   margin-left: -18px;
 }
-.back button{
+.back a{
   font-size: 14px;
 }
+
 @media (max-width: 600px){
-  .back button{
+  .back a{
     font-size: 12px;
   }
 }
