--- a/App.Frontend/src/app/features/auth/components/reset-password-form/reset-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/reset-password-form/reset-password-form.component.html
@@ -1,3 +1,49 @@
-<p>
-  reset-password-form works!
-</p>
+<section class="  rounded-4 mx-auto bg-white">
+  <!-- the two icons -->
+  <div class="icons">
+    <div class="left">
+      <span>
+        <i class="fa-solid fa-shield"></i>
+      </span>
+      <p>Ministry of Higher Education</p>
+    </div>
+    <div class="right">
+      <span>
+        <i class="fa-solid fa-book-open"></i>
+      </span>
+      <p>Supreme Council of Universities</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <!--Title of Form-->
+  <div class="content text-center">
+    <h6>Reset Password</h6>
+    <p>Reset your account password</p>
+  </div>
+
+  <!--body of Form-->
+  <form>
+
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Verification Code</label>
+      <input type="email" class="form-control" placeholder="Enter 6-digit code">
+    </div>
+
+
+    <button type="submit" class="btn w-100 login-submit">Verify Code</button>
+  </form>
+
+  <!--button of return-->
+  <div class="back">
+      <button [routerLink]="['/auth/forget-password']" class="btn">
+        <i class="fas fa-arrow-left m-2"></i>
+        back to forget password
+      </button>
+    </div>
+
+</section>
+
+
+
