--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.css
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.css
@@ -3,15 +3,24 @@ section{
   width: 90%;
   max-width: 420px;
   padding: 20px;
-  margin: 0 auto;
+  margin: 20px auto 0;
+  /* box-shadow: -5px 5px 5px #aaaaaa; */
+  /* box-shadow: rgb(255, 255, 255) 0px 8px 20px; */
+  /* box-shadow: rgba(255, 255, 255, 0.3) 0px 22px 70px 4px; */
 }
 
-
+/* .cont{
+  background:linear-gradient(#0A1F44,#1E3A8A);
+  color: white;
+  border: 1px solid white;
+} */
 /*start style of the div which contains two icons*/
 .icons{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 15px;
     margin-bottom: -20px;
+    padding-top: 10px;
   }
   .icons div{
     display: flex;
@@ -19,15 +28,10 @@ section{
     width: 100px;
     text-align: center;
   }
-  .icons .right{
-    margin-right: 80px;
-  }
-  .icons .right span{
-    background-color: #D4AF37  ;
-  }
-  .icons .left{
-    margin-left: 80px;
-  }
+
+    .icons .right span{
+      background-color: #D4AF37  ;
+    }
   .icons .left span{
     background:linear-gradient(#0A1F44,#1E3A8A);
   }
@@ -46,7 +50,7 @@ section{
 .icons div p{
   padding-top: 5px;
   font-size: 12px;
-  color: #4A5565;
+  /* color: #4A5565; */
 }
 
 /* style of div which contains the Login to manaraa  */
@@ -54,7 +58,7 @@ section{
   margin-bottom: 20px;
 }
 .content h6{
-  color: #0A1F44;
+  /* color: #0A1F44; */
   font-size: 16px;
   line-height: 16px;
   padding-top: 5px;
@@ -63,7 +67,7 @@ section{
 .content p{
   font-size: 16px;
   line-height: 24px;
-  color: #717182;
+  /* color: #717182; */
 }
 
 @media (max-width: 600px){
@@ -76,6 +80,10 @@ section{
   }
 
 }
+
+/* form{
+  padding:20px;
+} */
 /* button submit style */
 .login-submit{
   background-color: #0A1F44;
@@ -137,5 +145,7 @@ img{
   font-size: 12px;
 }
 
-
-
+.forget-link{
+  text-decoration: none;
+  color: #0A1F44;
+}
