--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -1,4 +1,5 @@
 <section class="  rounded-4 mx-auto bg-white">
+  
   <!-- the two icons -->
   <div class="icons">
     <div class="left">
@@ -19,7 +20,7 @@
 
   <!--Title of Form-->
   <div class="content text-center">
-    <h6>Forget Password</h6>
+    <h6>New Password</h6>
     <p>Reset your account password</p>
   </div>
 
@@ -27,24 +28,23 @@
   <form>
 
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
-      aria-describedby="emailHelp" placeholder="Enter your Email">
+      <label for="exampleInputPassword1" class="form-label">New Password</label>
+      <input type="password" class="form-control"
+        placeholder="Enter you new password">
     </div>
 
-    <button type="submit" class="btn w-100 login-submit">Send Reset Link</button>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+      <input type="password" class="form-control"
+        placeholder="confirm password">
+    </div>
 
+    <button type="submit" class="btn w-100 login-submit">Confirm</button>
   </form>
 
-  <div class="back mt-1">
-      <a [routerLink]="['/auth/login']" class="btn">
-        <i class="fas fa-arrow-left m-2"></i>
-        back to Login
-      </a>
-    </div>
-  <!--button of return-->
 
 </section>
+
 
 
 
