--- a/App.Frontend/src/app/features/auth/pages/reset-password-page/reset-password-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/reset-password-page/reset-password-page.component.html
@@ -1,1 +1,5 @@
+<button [routerLink]="['/auth/forget-password']" class="btn text-white">
+  <i class="fas fa-arrow-left m-2"></i>
+  back to reset
+</button>
 <app-reset-password-form></app-reset-password-form>
