Start The Logic of forgetpassword and reset password

--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -24,15 +24,23 @@
   </div>
 
   <!--body of Form-->
-  <form>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
       aria-describedby="emailHelp" placeholder="Enter your Email">
+            <div class="text-danger mt-1" *ngIf="email?.invalid && (email?.touched || email?.dirty)">
+              <small *ngIf="email?.errors?.['required']">
+                **Email is required.**
+              </small>
+              <small *ngIf="email?.errors?.['email']">
+                Please enter a valid email address (e.g., user@example.com).
+              </small>
+            </div>
     </div>
 
-    <button type="submit" class="btn w-100 login-submit">Send Reset Link</button>
+    <button type="submit" class="btn w-100 login-submit"  [disabled]="form.invalid">Send Reset Link</button>
 
   </form>
 
