--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -1,5 +1,5 @@
 <section class="  rounded-4 mx-auto bg-white">
-  
+
   <!-- the two icons -->
   <div class="icons">
     <div class="left">
@@ -25,21 +25,33 @@
   </div>
 
   <!--body of Form-->
-  <form>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">New Password</label>
-      <input type="password" class="form-control"
+      <input type="password" class="form-control" formControlName="newPassword"
         placeholder="Enter you new password">
+
+                    <div class="text-danger mt-1" *ngIf="newPassword?.invalid && (newPassword?.touched || newPassword?.dirty)">
+                      <small *ngIf="newPassword?.errors?.['required']">
+                        **New password is required.**
+                      </small>
+                    </div>
     </div>
 
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-      <input type="password" class="form-control"
+      <input type="password" class="form-control" formControlName="confirmPassword"
         placeholder="confirm password">
+
+                            <div class="text-danger mt-1" *ngIf="confirmPassword?.invalid && (confirmPassword?.touched || confirmPassword?.dirty)">
+                              <small *ngIf="confirmPassword?.errors?.['required']">
+                                **Confirm Password is required.**
+                              </small>
+                            </div>
     </div>
 
-    <button type="submit" class="btn w-100 login-submit">Confirm</button>
+    <button type="submit" class="btn w-100 login-submit" [disabled]="form.invalid">Confirm</button>
   </form>
 
 
