--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -37,6 +37,12 @@
                         **New password is required.**
                       </small>
                     </div>
+
+                                        <div class="text-danger mt-1" *ngIf="newPassword?.invalid && (newPassword?.touched || newPassword?.dirty)">
+                                          <small *ngIf="newPassword?.errors?.['pattern']">
+                                            **Password should be at least 8 digits and should contains Lowercase, NonAlphanumeric and Uppercase**
+                                          </small>
+                                        </div>
     </div>
 
     <div class="mb-3">
@@ -44,10 +50,13 @@
       <input type="password" class="form-control" formControlName="confirmPassword"
         placeholder="confirm password">
 
-                            <div class="text-danger mt-1" *ngIf="confirmPassword?.invalid && (confirmPassword?.touched || confirmPassword?.dirty)">
+                            <div class="text-danger mt-1" *ngIf="(confirmPassword?.touched && newPassword?.touched) &&  (confirmPassword?.invalid || form?.errors?.['UnmatchedPassword'])">
                               <small *ngIf="confirmPassword?.errors?.['required']">
                                 **Confirm Password is required.**
                               </small>
+                                              <small *ngIf="form?.errors?.['UnmatchedPassword']">
+                                                confirmPassWord Is Does Not Match
+                                              </small>
                             </div>
     </div>
 
