--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,27 +1,27 @@
 <section class="  rounded-4 mx-auto bg-white ">
 
-    <!-- the two icons -->
-    <div class="icons">
-      <div class="left">
-        <span>
-          <i class="fa-solid fa-shield"></i>
-        </span>
-        <p>Ministry of Higher Education</p>
-      </div>
-      <div class="right">
-        <span>
-          <i class="fa-solid fa-book-open"></i>
-        </span>
-        <p>Supreme Council of Universities</p>
-      </div>
+  <!-- the two icons -->
+  <div class="icons">
+    <div class="left">
+      <span>
+        <i class="fa-solid fa-shield"></i>
+      </span>
+      <p>Ministry of Higher Education</p>
     </div>
-
-    <hr>
-
-    <div class="content text-center">
-      <h6>Login to Manaraa</h6>
-      <p>Unified National Education Platform</p>
+    <div class="right">
+      <span>
+        <i class="fa-solid fa-book-open"></i>
+      </span>
+      <p>Supreme Council of Universities</p>
     </div>
+  </div>
+
+  <hr>
+
+  <div class="content text-center">
+    <h6>Login to Manaraa</h6>
+    <p>Unified National Education Platform</p>
+  </div>
 
 
 
@@ -31,23 +31,14 @@
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
         aria-describedby="emailHelp" placeholder="Enter your National ID">
-      <div class="text-danger mt-1" *ngIf="email?.invalid && (email?.touched || email?.dirty)">
-        <small *ngIf="email?.errors?.['required']">
-          **Email is required.**
-        </small>
-
-        <small *ngIf="email?.errors?.['email']">
-          Please enter a valid email address (e.g., user@example.com).
-        </small>
-      </div>
+      <app-error [control]="email"></app-error>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
       <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1"
         placeholder="Enter your password">
-      <div class="text-danger" *ngIf="password?.invalid && password?.touched">
-        <small *ngIf="password?.errors?.['required']">**Password is required.**</small>
-      </div>
+      <app-error [control]="password"></app-error>
+
     </div>
 
     <button type="submit" class="btn w-100 login-submit">Login with Email</button>
@@ -62,12 +53,12 @@
     <button type="submit" class="btn border rounded-2 w-100"> <img src="/windows_2374606.png" alt=""> Login with
       Microsoft Identity</button>
 
-      <div class="forgot text-center">
-        <a class="forget-link" [routerLink]="['/auth/forget-password']">Forgot Password?</a>
-        <div class="first">
-          <a>First Time? Contact your institution</a>
-        </div>
+    <div class="forgot text-center">
+      <a class="forget-link" [routerLink]="['/auth/forget-password']">Forgot Password?</a>
+      <div class="first">
+        <a>First Time? Contact your institution</a>
       </div>
+    </div>
   </form>
 
 
