add Toastr And Update Code

--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -40,7 +40,7 @@
             </div>
     </div>
 
-    <button type="submit" class="btn w-100 login-submit"  [disabled]="form.invalid">Send Reset Link</button>
+    <button type="submit" class="btn w-100 login-submit"  >Send Reset Link</button>
 
   </form>
 
