--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -60,7 +60,7 @@
                             </div>
     </div>
 
-    <button type="submit" class="btn w-100 login-submit" [disabled]="form.invalid">Confirm</button>
+    <button type="submit" class="btn w-100 login-submit">Confirm</button>
   </form>
 
 
