FinshReset&ForgetPassword + Add Service For Error Handling

--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -30,18 +30,12 @@
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
       aria-describedby="emailHelp" placeholder="Enter your Email">
-            <div class="text-danger mt-1" *ngIf="email?.invalid && (email?.touched || email?.dirty)">
-              <small *ngIf="email?.errors?.['required']">
-                **Email is required.**
-              </small>
-              <small *ngIf="email?.errors?.['email']">
-                Please enter a valid email address (e.g., user@example.com).
-              </small>
-            </div>
+      <app-error [control]="email"></app-error>
     </div>
 
     <button type="submit" class="btn w-100 login-submit"  >Send Reset Link</button>
-
+    <div #errorMessage class="alert alert-danger mt-3 d-none">
+    </div>
   </form>
 
   <div class="back mt-1">
