--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -30,36 +30,20 @@
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">New Password</label>
       <input type="password" class="form-control" formControlName="newPassword" placeholder="Enter you new password">
-
-      <div class="text-danger mt-1" *ngIf="newPassword?.invalid && (newPassword?.touched || newPassword?.dirty)">
-        <small *ngIf="newPassword?.errors?.['required']">
-          **New password is required.**
-        </small>
-      </div>
-
-      <div class="text-danger mt-1" *ngIf="newPassword?.invalid && (newPassword?.touched || newPassword?.dirty)">
-        <small *ngIf="newPassword?.errors?.['pattern']">
-          **Password should be at least 8 digits and should contains Lowercase, NonAlphanumeric and Uppercase**
-        </small>
-      </div>
+      <app-error [control]="newPassword"></app-error>
     </div>
 
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
       <input type="password" class="form-control" formControlName="confirmPassword" placeholder="confirm password">
 
-      <div class="text-danger mt-1"
-        *ngIf="(confirmPassword?.touched && newPassword?.touched) &&  (confirmPassword?.invalid || form?.errors?.['UnmatchedPassword'])">
-        <small *ngIf="confirmPassword?.errors?.['required']">
-          **Confirm Password is required.**
-        </small>
-        <small *ngIf="form?.errors?.['UnmatchedPassword']">
-          confirmPassWord Is Does Not Match
-        </small>
-      </div>
+      <app-error [control]="confirmPassword"></app-error>
+
     </div>
 
     <button type="submit" class="btn w-100 login-submit">Confirm</button>
+    <div #errorMessage class="alert alert-danger mt-3 d-none">
+    </div>
   </form>
 
 
