add libraries of translation and setup app-translate

--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -1,6 +1,5 @@
-<section class="  rounded-4 mx-auto bg-white">
+<!-- <section class="  rounded-4 mx-auto bg-white">
 
-  <!-- the two icons -->
   <div class="icons">
     <div class="left">
       <span>
@@ -18,13 +17,11 @@
 
   <hr>
 
-  <!--Title of Form-->
   <div class="content text-center">
     <h6>New Password</h6>
     <p>Reset your account password</p>
   </div>
 
-  <!--body of Form-->
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <div class="mb-3">
@@ -61,6 +58,4 @@
 
     <button type="submit" class="btn w-100 login-submit" [disabled]="form.invalid">Confirm</button>
   </form>
-
-
-</section>
+</section> -->
