--- a/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <button [routerLink]="['/']" class="btn text-white">
   <i class="fas fa-arrow-left m-2"></i>
-  back to home
+  {{'backToHome' | translate}}
 </button>
 
-  <app-login-form></app-login-form>
+<app-login-form></app-login-form>
 
