--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -25,7 +25,7 @@
 
 
   <!--body of Form-->
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="!sucMsg">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="!successMessage">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
@@ -36,9 +36,13 @@
     <button type="submit" class="btn w-100 login-submit"  >Send Reset Link</button>
     <div #errorMessage class="alert alert-danger mt-3 d-none">
     </div>
-
+    <div class="env-msg alert alert-primary mt-3 d-flex gap-2" role="alert">
+      <span><i class="fa-regular fa-envelope"></i></span>
+      <p>A password reset link will be sent to your registered email address. Check your spam folder if you don't receive it
+        within a few minutes.</p>
+    </div>
   </form>
-  <div *ngIf="sucMsg">
+  <div *ngIf="successMessage">
     <div class="alert alert-success text-center valid-msg" role="alert">
       <span><i class="fa-solid fa-circle-check"></i></span>
       <h5>Email Sent!</h5>
