--- a/App.Frontend/src/app/shared/components/error/error.component.css
+++ b/App.Frontend/src/app/shared/components/error/error.component.css
@@ -1,4 +1,4 @@
-.error-wrapper {
+/* .error-wrapper {
   max-height: 0;
   opacity: 0;
   overflow: hidden;
@@ -23,4 +23,4 @@
   max-height: 50px;
   opacity: 1;
   transform: translateY(0);
-}
+} */
