Add University & Get All

--- a/App.Frontend/src/app/features/system-admin/components/sidebar/sidebar.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<div class="menu-item active">
+<div class="menu-item" routerLink="/system-admin/dashboard" routerLinkActive="active">
   📊 لوحة المعلومات
 </div>
-<div class="menu-item">
-  👥 المستخدمين
+<div class="menu-item" routerLink="/system-admin/university" routerLinkActive="active">
+  👥 universties
 </div>
 <div class="menu-item">
   📦 المنتجات
