--- a/App.Frontend/src/app/features/system-admin/components/add-university-component/add-university-component.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/add-university-component/add-university-component.component.html
@@ -1,3 +1,4 @@
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -8,35 +9,37 @@
       </div>
 
       <div class="modal-body">
-        <form [formGroup]="form" (ngSubmit)="Submit()">
 
-              <div class="mb-3">
-                <label for="name" class="form-label">name</label>
-                <input type="text" class="form-control" formControlName="name" id="name" aria-describedby="emailHelp"
-                  placeholder="Enter your name">
-                <app-error [control]="name"></app-error>
-              </div>
 
-              <div class="mb-3">
-                <label for="description" class="form-label">description</label>
-                <input type="text" class="form-control" formControlName="description" id="description" aria-describedby="description"
-                  placeholder="Enter your description">
-                <app-error [control]="description"></app-error>
-              </div>
+                <form [formGroup]="form" (ngSubmit)="Submit()">
 
-              <div class="mb-3">
-                <label for="address" class="form-label">address</label>
-                <input type="text" class="form-control" formControlName="address" id="address" aria-describedby="address"
-                  placeholder="Enter your address">
-                <app-error [control]="address"></app-error>
-              </div>
+                  <div class="mb-3">
+                    <label for="name" class="form-label">name</label>
+                    <input type="text" class="form-control" formControlName="name" id="name" aria-describedby="emailHelp"
+                      placeholder="Enter your name">
+                    <app-error [control]="name"></app-error>
+                  </div>
 
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter your Email">
-        <app-error [control]="email"></app-error>
-    </div>
+                  <div class="mb-3">
+                    <label for="description" class="form-label">description</label>
+                    <input type="text" class="form-control" formControlName="description" id="description"
+                      aria-describedby="description" placeholder="Enter your description">
+                    <app-error [control]="description"></app-error>
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="address" class="form-label">address</label>
+                    <input type="text" class="form-control" formControlName="address" id="address" aria-describedby="address"
+                      placeholder="Enter your address">
+                    <app-error [control]="address"></app-error>
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
+                      aria-describedby="emailHelp" placeholder="Enter your Email">
+                    <app-error [control]="email"></app-error>
+                  </div>
 
                   <div class="mb-3">
                     <label for="website" class="form-label">website</label>
@@ -44,12 +47,13 @@
                       placeholder="Enter your website">
                     <app-error [control]="website"></app-error>
                   </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" #closeModalBtn data-bs-dismiss="modal">Close</button>
-                          <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="submit" class="btn btn-primary">Submit</button>
 
-                        </div>
-        </form>
+                </form>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" #closeModalBtn data-bs-dismiss="modal">Close</button>
+
+        </div>
       </div>
 
 
@@ -57,3 +61,5 @@
     </div>
   </div>
 </div>
+
+
