--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.html
@@ -5,13 +5,13 @@
       <span>
         <i class="fa-solid fa-shield"></i>
       </span>
-      <p>Ministry of Higher Education</p>
+      <p>{{ "Auth-Forgot.Ministry" | translate }}</p>
     </div>
     <div class="right">
       <span>
         <i class="fa-solid fa-book-open"></i>
       </span>
-      <p>Supreme Council of Universities</p>
+      <p>{{ "Auth-Forgot.Supreme" | translate }}</p>
     </div>
   </div>
 
@@ -19,39 +19,45 @@
 
   <!--Title of Form-->
   <div class="content text-center">
-    <h6>Forget Password</h6>
-    <p>Reset your account password</p>
+    <h6>{{ "Auth-Forgot.Forgot" | translate }}</h6>
+    <p>{{ "Auth-Forgot.Reset" | translate }}</p>
   </div>
-
 
   <!--body of Form-->
   <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="!successMessage">
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
-      aria-describedby="emailHelp" placeholder="Enter your Email">
+      <label for="exampleInputEmail1" class="form-label">{{
+        "Auth-Forgot.Email" | translate
+      }}</label>
+      <input
+        type="email"
+        class="form-control"
+        formControlName="email"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+        placeholder="{{ 'Auth-Forgot.Enter-Email' | translate }}"
+      />
       <app-error [control]="email"></app-error>
     </div>
 
-    <button type="submit" class="btn w-100 login-submit"  >Send Reset Link</button>
-    <div #errorMessage class="alert alert-danger mt-3 d-none">
-    </div>
+    <button type="submit" class="btn w-100 login-submit">
+      {{ "Auth-Forgot.Send" | translate }}
+    </button>
+    <div #errorMessage class="alert alert-danger mt-3 d-none"></div>
     <div class="env-msg alert alert-primary mt-3 d-flex gap-2" role="alert">
       <span><i class="fa-regular fa-envelope"></i></span>
-      <p>A password reset link will be sent to your registered email address. Check your spam folder if you don't receive it
-        within a few minutes.</p>
+      <p>{{ "Auth-Forgot.Msg" | translate }}</p>
     </div>
   </form>
   <div *ngIf="successMessage">
     <div class="alert alert-success text-center valid-msg" role="alert">
       <span><i class="fa-solid fa-circle-check"></i></span>
-      <h5>Email Sent!</h5>
-      <p>Password reset link has been sent to your email address.</p>
+      <h5>{{ "Auth-Forgot.Sent" | translate }}</h5>
+      <p>{{ "Auth-Forgot.Msg-pass" | translate }}</p>
     </div>
     <div class="msg alert alert-dark" role="alert">
       <p>
-        Please check your email and click on the reset link. The link will expire in 24 hours. If
-        you don't receive the email, check your spam folder or contact your institution.
+        {{ "Auth-Forgot.Msg-Check" | translate }}
       </p>
     </div>
   </div>
@@ -59,7 +65,7 @@
   <div class="back mt-1">
     <a [routerLink]="['/auth/login']" class="btn">
       <i class="fas fa-arrow-left m-2"></i>
-      back to Login
+      {{ "Auth-Forgot.Back" | translate }}
     </a>
   </div>
   <!--button of return-->
