--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.html
@@ -1,45 +1,45 @@
-<!-- <section class="  rounded-4 mx-auto bg-white">
+<section class="  rounded-4 mx-auto bg-white">
 
   <div class="icons">
     <div class="left">
       <span>
         <i class="fa-solid fa-shield"></i>
       </span>
-      <p>Ministry of Higher Education</p>
+      <p>{{'Auth-New.Ministry'| translate}}</p>
     </div>
     <div class="right">
       <span>
         <i class="fa-solid fa-book-open"></i>
       </span>
-      <p>Supreme Council of Universities</p>
+      <p>{{'Auth-New.Supreme'| translate}}</p>
     </div>
   </div>
 
   <hr>
 
   <div class="content text-center">
-    <h6>New Password</h6>
-    <p>Reset your account password</p>
+    <h6>{{'Auth-New.New'| translate}}</h6>
+    <p>{{'Auth-New.Reset'| translate}}</p>
   </div>
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">New Password</label>
-      <input type="password" class="form-control" formControlName="newPassword" placeholder="Enter you new password">
+      <label for="exampleInputPassword1" class="form-label">{{'Auth-New.Password'| translate}}</label>
+      <input type="password" class="form-control" formControlName="newPassword" placeholder="{{'Auth-New.Enter-password'| translate}}">
       <app-error [control]="newPassword"></app-error>
     </div>
 
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-      <input type="password" class="form-control" formControlName="confirmPassword" placeholder="confirm password">
+      <label for="exampleInputPassword1" class="form-label">{{'Auth-New.new-Password'| translate}}</label>
+      <input type="password" class="form-control" formControlName="confirmPassword" placeholder="{{'Auth-New.confirm-password'| translate}}">
 
       <app-error [control]="confirmPassword"></app-error>
 
     </div>
 
-    <button type="submit" class="btn w-100 login-submit">Confirm</button>
+    <button type="submit" class="btn w-100 login-submit">{{'Auth-New.Confirm'| translate}}</button>
     <div #errorMessage class="alert alert-danger mt-3 d-none">
     </div>
   </form>
-</section> -->
+</section>
