--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
@@ -6,21 +6,21 @@
       <span>
         <i class="fa-solid fa-shield"></i>
       </span>
-      <p>Ministry of Higher Education</p>
+      <p>{{'Auth-login.Ministry' | translate}}</p>
     </div>
     <div class="right">
       <span>
         <i class="fa-solid fa-book-open"></i>
       </span>
-      <p>Supreme Council of Universities</p>
+      <p>{{'Auth-login.Supreme' | translate}}</p>
     </div>
   </div>
 
   <hr>
 
   <div class="content text-center">
-    <h6>Login to Manaraa</h6>
-    <p>Unified National Education Platform</p>
+    <h6>{{'Auth-login.Login' | translate}}</h6>
+    <p>{{'Auth-login.Unified' | translate}}</p>
   </div>
 
 
@@ -28,40 +28,38 @@
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <label for="exampleInputEmail1" class="form-label">{{'Auth-login.Email' | translate}}</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
-        aria-describedby="emailHelp" placeholder="Enter your National ID">
+        aria-describedby="emailHelp" placeholder="{{'Auth-login.Enter-Email' | translate}}">
       <app-error [control]="email"></app-error>
     </div>
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <label for="exampleInputPassword1" class="form-label">{{'Auth-login.Password' | translate}}</label>
       <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1"
-        placeholder="Enter your password">
+        placeholder="{{'Auth-login.Enter-password' | translate}}">
       <app-error [control]="password"></app-error>
 
     </div>
 
-    <button type="submit" class="btn w-100 login-submit">Login with Email</button>
+    <button type="submit" class="btn w-100 login-submit">{{'Auth-login.Login-email' | translate}}</button>
     <div #errorMessage class="alert alert-danger mt-3 d-none">
     </div>
 
     <div class="or-wrapper">
       <div class="line"></div>
-      <span class="or-badge">OR</span>
+      <span class="or-badge">{{'Auth-login.OR' | translate}}</span>
       <div class="line"></div>
     </div>
-    <button type="submit" class="btn border rounded-2 w-100"> <img src="/windows_2374606.png" alt=""> Login with
-      Microsoft Identity</button>
+    <button type="submit" class="btn border rounded-2 w-100"> <img src="/windows_2374606.png" alt="">
+      {{'Auth-login.Login-Microsoft' | translate}}</button>
 
     <div class="forgot text-center">
-      <a class="forget-link" [routerLink]="['/auth/forget-password']">Forgot Password?</a>
+      <a class="forget-link" [routerLink]="['/auth/forget-password']">{{'Auth-login.Forgot' | translate}}</a>
       <div class="first">
-        <a>First Time? Contact your institution</a>
+        <a>{{'Auth-login.First' | translate}}</a>
       </div>
     </div>
   </form>
-
-
 
 
 </section>
