--- a/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/App.Frontend/src/app/features/auth/pages/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <button [routerLink]="['/']" class="btn text-white">
   <i class="fas fa-arrow-left m-2"></i>
-  {{'backToHome' | translate}}
+  {{'BackToHome' | translate}}
 </button>
 
 <app-login-form></app-login-form>
