--- a/App.Frontend/src/app/features/auth/pages/new-password-page/new-password-page.html
+++ b/App.Frontend/src/app/features/auth/pages/new-password-page/new-password-page.html
@@ -1,1 +1,11 @@
+<div class="ms-sm-3 ms-0 mb-sm-0 mb-2">
+  <select
+    class="form-select lang-select"
+    [value]="currentLanguage"
+    (change)="changeLanguage($any($event.target).value)"
+  >
+    <option value="en">English</option>
+    <option value="ar">العربية</option>
+  </select>
+</div>
 <app-new-password-form></app-new-password-form>
