--- a/App.Frontend/src/app/features/system-admin/components/universities/university-dialog-component/university-dialog.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/universities/university-dialog-component/university-dialog.component.html
@@ -1,16 +1,8 @@
+<app-dialog #dialog dialogId="exampleModal">
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Create University</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-        </button>
-      </div>
+  <span dialog-title>Create University</span>
 
-      <div class="modal-body">
-
-
+  <div dialog-body>
                 <form [formGroup]="form" (ngSubmit)="Submit()">
 
                   <div class="mb-3">
@@ -47,19 +39,12 @@
                       placeholder="Enter your website">
                     <app-error [control]="website"></app-error>
                   </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Submit</button>
-          <button type="button" class="btn btn-secondary" #closeModalBtn data-bs-dismiss="modal">Close</button>
 
-        </div>
+                              <button class="btn btn-primary">Save</button>
+
                 </form>
-
-      </div>
-
-
-
-    </div>
   </div>
-</div>
+
+</app-dialog>
 
 
