--- a/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.css
+++ b/App.Frontend/src/app/features/auth/components/forget-password-form/forget-password-form.component.css
@@ -7,11 +7,13 @@ section {
 }
 
 /*start style of the div which contains two icons*/
+
 .icons {
   display: flex;
   justify-content: center;
   gap: 15px;
-  margin-bottom: -20px;
+  margin-block-end: -20px;
+  padding-block-start: 10px;
 }
 .icons div {
   display: flex;
@@ -27,23 +29,28 @@ section {
 .icons .left span {
   background: linear-gradient(#0a1f44, #1e3a8a);
 }
+
 .icons span {
   display: block;
   width: 60px;
   height: 50px;
-  margin-left: 20px;
+  margin-inline-start: 20px;
   border-radius: 8px;
 }
+
 .icons div i {
   color: white;
   font-size: 26px;
-  padding-top: 12px;
+  padding-block-start: 12px;
 }
+
 .icons div p {
-  padding-top: 5px;
+  padding-block-start: 5px;
   font-size: 12px;
   color: #4a5565;
 }
+
+
 
 /* style of div which contains the Login to manaraa  */
 .content {
