--- a/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.css
+++ b/App.Frontend/src/app/features/auth/components/new-password-form/new-password-form.css
@@ -8,42 +8,46 @@ section{
 
 
 /*start style of the div which contains two icons*/
-.icons{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin-bottom: -20px;
-  }
-  .icons div{
-    display: flex;
-    flex-direction: column;
-    width: 100px;
-    text-align: center;
-  }
-  
-  .icons .right span{
-    background-color: #D4AF37  ;
-  }
+.icons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-block-end: -20px;
+  padding-block-start: 10px;
+}
+.icons div {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  text-align: center;
+}
 
-  .icons .left span{
-    background:linear-gradient(#0A1F44,#1E3A8A);
-  }
-  .icons span{
+.icons .right span {
+  background-color: #d4af37;
+}
+
+.icons .left span {
+  background: linear-gradient(#0a1f44, #1e3a8a);
+}
+
+.icons span {
   display: block;
   width: 60px;
   height: 50px;
-  margin-left: 20px;
+  margin-inline-start: 20px;
   border-radius: 8px;
 }
-.icons div i{
+
+.icons div i {
   color: white;
   font-size: 26px;
-  padding-top: 12px;
+  padding-block-start: 12px;
 }
-.icons div p{
-  padding-top: 5px;
+
+.icons div p {
+  padding-block-start: 5px;
   font-size: 12px;
-  color: #4A5565;
+  color: #4a5565;
 }
 
 /* style of div which contains the Login to manaraa  */
