--- a/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
+++ b/App.Frontend/src/app/features/auth/components/login-form/login-form.component.html
@@ -28,7 +28,7 @@
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <label for="exampleInputEmail1" class="form-label">{{ 'login.form.email' | translate }}</label>
       <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
         aria-describedby="emailHelp" placeholder="Enter your National ID">
       <app-error [control]="email"></app-error>
